# island-game

./: .gitignore  CMakeLists.txt  README.md  TODO.md  draw  main.cpp  mainTest.hpp  makefile  run.sh  setup.sh  test.cpp
.github/workflows/: makefile.yml
libs/: get_libs.sh
resources/configs/: const-settings.json  enemy.json  player.json
src/: CaveMap.cpp  CaveMap.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  GameConfig.cpp  GameConfig.hpp  GameEntity.cpp  GameEntity.hpp  GameEvents.cpp  GameEvents.hpp  GameMap.cpp  GameMap.hpp  GameState.cpp  GameState.hpp  IslandMap.cpp  IslandMap.hpp  MainView.cpp  MainView.hpp  MainWindow.cpp  MainWindow.hpp  MapChunk.cpp  MapChunk.hpp  PathFindingNode.cpp  PathFindingNode.hpp  Player.cpp  Player.hpp  TextureFactory.cpp  TextureFactory.hpp  Tile.cpp  Tile.hpp  main.cpp
src/Entities/: Enemy.cpp  Enemy.hpp  GameEntity.cpp  GameEntity.hpp  Player.cpp  Player.hpp
src/EntityFactories/: EnemyFactory.cpp  EnemyFactory.hpp  FactoryBaseClass.cpp  FactoryBaseClass.hpp  PlayerFactory.cpp  PlayerFactory.hpp
src/GameState/: EntityManager.cpp  EntityManager.hpp  GameEvents.cpp  GameEvents.hpp  GameState.cpp  GameState.hpp  MapInfo.cpp  MapInfo.hpp  TextureFactory.cpp  TextureFactory.hpp  Timing.cpp  Timing.hpp
src/Map/: CaveMap.cpp  CaveMap.hpp  GameMap.cpp  GameMap.hpp  (+6 more)
tests/: GameConfigTestSuite.cpp  GameConfigTestSuite.hpp  GameEntityTest.cpp  GameEntityTest.hpp  GameEntityTestSuite.cpp  GameEventsTestSuite.cpp  PerlinNoiseTest.cpp  TextureFactoryTestSuite.cpp  mainTest.cpp  mainTest.hpp  testConfig.json  testConfig2.json
(+37 files in other folders)
